Partial hand implementation of /game/:gameId routes
